matrix-stack/mas/00-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mas-dpl
  namespace: matrix
  labels:
    app: mas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mas
  template:
    metadata:
      labels:
        app: mas
    spec:
      containrs:
        - name: mas
          image: ghcr.io/element-hq/matrix-authentication-service:latest
          ports:
            - containerPort
