matrix-stack/mas/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mas-dpl
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mas
  template:
    metadata:
      labels:
        app: mas
    spec:
      containers:
        - name: mas
          image: ghcr.io/matrix-org/matrix-authentication-service:latest
          args: ["--config", "/etc/mas/config.yaml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: mas-config-rendered
              mountPath: /etc/mas/config.yaml
              subPath: config.yaml
      volumes:
        - name: mas-raw-config
          configMap:
            name: mas-cfm
        - name: mas-config-rendered
          emptyDir: {}
