matrix-stack/mas/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mas-svc
  namespace: matrix
spec:
  selector:
    app: mas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
