matrix-stack/mas/03-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mas-ing
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.k8s.test`)
      kind: Rule
      services:
        - name: mas-svc
          port: 80
    - match: Host(`k8s.test`) && PathPrefix(`/.well-known/openid-configuration`)
      kind: Rule
      services:
        - name: mas-svc
          port: 80
  tls: {}
